@@ -2099,6 +2099,13 @@ test(751, DT[,colname:=sum(b),by=a,with=FALSE], data.table(a=rep(1:3,1:3),b=1:6,
 DT = data.table(a=rep(1:3,2:4),b=1:9)
 test(752, DT[,head(.SD,2)[,new:=1:.N],by=a], data.table(a=rep(1:3,each=2),b=c(1:4,6:7),new=1:2))
 
+# Test duplicate() of recycled plonking RHS, #2298
+DT = data.table(a=letters[3:1],x=1:3)
+test(753, setkey(DT[,c("x1","x2"):=x],a), data.table(a=letters[1:3],x=3:1,x1=3:1,x2=3:1,key="a"))
+DT = data.table(a=letters[3:1],x=1:3,y=4:6)
+test(754, setkey(DT[,c("x1","y1","x2","y2"):=list(x,y)],a), data.table(a=letters[1:3],x=3:1,y=6:4,x1=3:1,y1=6:4,x2=3:1,y2=6:4,key="a"))
+
+
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 
